infrastructure/node-main/ns-media/base/bazarr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: http
      protocol: TCP
